--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,8 @@
    font-size: larger;
  }
 
- a.btn {
+ a.btn,
+ .btnLogin {
    background-color: #63b769;
    border: 2px;
    color: white;
@@ -70,10 +71,90 @@
    width: 100dvw;
  }
 
+ .homeBtn {
+   text-decoration: none;
+ }
 
+ .homeBtn button {
+   padding: 10px 20px;
+   font-size: 1em;
+   background-color: white;
+   color: #4CAF50;
+   border: 2px solid #4CAF50;
+   border-radius: 4px;
+   cursor: pointer;
+   transition: background-color 0.3s, color 0.3s;
+ }
+
+ .homeBtn button:hover {
+   background-color: #4CAF50;
+   color: white;
+ }
 
  .imgCR {
    width: 120px;
+ }
+
+
+ /*login page*/
+
+ .loginPage {
+   height: 80dvh;
+
+   background-color: #ffffffae;
+   padding: 3% 3%;
+   border-radius: 5%;
+   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ }
+
+ .container {
+   padding-bottom: 40%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ label {
+   font-size: 20px;
+   padding-bottom: 10%
+ }
+
+ #loginForm {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding: 20px;
+   background-color: #d38d28a6;
+   border-radius: 8px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+ }
+
+ #loginForm label {
+   margin-bottom: 10px;
+   font-size: 1.2em;
+ }
+
+ #loginForm input {
+   margin-bottom: 20px;
+   padding: 10px;
+   font-size: 1em;
+   width: 100%;
+   box-sizing: border-box;
+ }
+
+ .btnLogin {
+   padding: 10px 20px;
+   font-size: 1em;
+   background-color: #4caf50;
+   color: white;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+   margin-top: 20px;
+ }
+
+ .btnLogin:hover {
+   background-color: #45a049;
  }
 
  /*email page style*/
@@ -84,12 +165,14 @@
  }
 
  #desktop {
-   background-color: #ddeeff;
+   background-image: url('img/top-view-glazed-doughnuts-with-assortment-candy-marshmallow.jpg');
+   background-size: cover;
+   background-repeat: no-repeat;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-wrap: wrap;
-   justify-content: center;
+   justify-content: space-around;
    align-items: center;
  }
 
